# d4-enhanced

./: index.html  package.json  tailwind.config.cjs
src/: App.svelte
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  models.rs  ocr.rs  queries.rs
src/components/: Modal.svelte
src/lib/: api.ts  models.ts
