[package]
name = "d4-enhanced"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "global-shortcut-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusty-tesseract = "1.1.6"
opencv = "0.83.0"
screenshots = "0.7.0"
chrono = "0.4.26"
regex = "1.9.1"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1.29.1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
